# reddit-bot

./: .gitignore  README.md  docker-compose.yml  load_env.sh  run.sh  supabase_icp.json
agent/: .gitignore  Dockerfile  Dockerfile.scraper  README.md  pyproject.toml  reddit_similarity.py  requirements_similarity.txt  test_embeddings.py
agent/config/: icp_agent_config.json  icp_pain_points_combined_agent_config.json  icp_pain_points_combined_agent_config.xml  keyword_agent_config.json  keyword_agent_config.xml  lead_reviewer_agent_config.json  lead_scoring_agent_config.json  lead_scoring_agent_config.xml  pain_points_agent_config.json  reply_agent_config.json  reply_agent_config.xml  subreddit_agent_config.json  subreddit_relevance_agent_config.json  subreddit_relevance_agent_config.xml
agent/oauth_test/: README.md  oauth_server.py  requirements.txt  test_oauth.py
agent/scraper/: agent_scraper.py
agent/scraper/db/: db.py
agent/scraper/embeddings/: openai_embeddings_service.py
agent/scraper/lead_scoring/: lead_scoring_agent.py  lead_scoring_service.py
agent/scripts/: agent.sh  load_env.ps1  local.sh  run.sh
agent/server/: agent_server.py
agent/server/agents/: agents.py
agent/server/db/: db.py
agent/server/models/: models.py
agent/server/services/: find_subreddits.py  generate_descriptions.py  generate_reply.py
agent/server/utils/: parse_page.py
agent/shared/agent/: agent_models.py  agent_services.py  agent_utils.py
agent/shared/models/: agent_models.py  db_models.py  server_models.py
agent/src/: agent_scraper.py  agent_server.py  db.py  logging_config.py  models.py  parse_page.py  reddit.py  reddit_scraper_standalone.py  reddit_streamer.py  tools.py
agent/src/agent/: agent_models.py  agent_utils.py  agents.py  model.py  services.py  tools.py
agent/src/agents/: __init__.py  agents.py
agent/src/db/: db.py
agent/src/dtos/: server_dtos.py
agent/src/experiments/: all.py  test.py
agent/src/lead_scoring/: lead_scoring_agent.py  (+2 more)
(+281 files in other folders)
